--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 
 <head>
-    <link rel="stylesheet" href="./css/main_header.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/main_footer.css">
+    <link rel="stylesheet" href="./CSS/main_header.css">
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/main_footer.css">
     <meta name="description" content="Clone of Google">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
